syntax = "proto3";

package intento.intent.v1beta1;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/trstlabs/intento/x/intent/types";

message ActionIbcUsage {
  string address = 1;
  repeated ActionAck txs = 2;
}

message ActionAck {
  cosmos.base.v1beta1.Coin coin = 1 [ (gogoproto.nullable) = false ];
  string connection_id = 2;
}